consumerlab.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 3730,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.7,
  "homepage_snapshot_redirected_domain": "consumerlab.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001082320id_/http://www.consumerlab.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001082320id_/http%3A//consumerlab.com",
  "interval": "2004_B",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "consumerlab.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204232930id_/http%3A//www.consumerlab.com/privacy.asp",
  "policy_title": "ConsumerLab.com - independent tests of herbal, vitamin, and mineral supplements",
  "policy_url": "consumerlab.com/privacy.asp",
  "sha1": "3d284807d61cacfc85a81147d4655a1e57b0a793",
  "simhash": 14683810036569461268,
  "simhash_updated": false,
  "site_hostname": "consumerlab.com",
  "site_url": "http://consumerlab.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204232930",
  "word_count": 605,
  "year": 2004
}

--- a/c/co/con/consumerlab.com.html
+++ b/c/co/con/consumerlab.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the consumerlab.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602184055id_/http%3A//consumerlab.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the consumerlab.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204232930id_/http%3A//www.consumerlab.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 		<title>ConsumerLab.com - independent tests of herbal, vitamin, and mineral supplements</title>
@@ -71,79 +71,79 @@ function MM_swapImage() { //v2.0
 						<table border="0" cellpadding="0" cellspacing="0" width="149" valign="top">
 	<tbody><tr>
 
-		<td><a href="/subscribe.asp"><img height="26" width="149" src="/images/subscribe2.gif" name="pic17" border="0"></a></td>
+		<td><a href="/subscribe.asp"><img height="26" width="149" src="/images/subscribe2.gif" name="pic17" alt="Click here to become a member" border="0"></a></td>
 
 	</tr>
 		<tr>
 
-		<td><a href="/GiftCerts/index.asp"><img height="26" width="149" src="/images/nav_certificate_off.gif" name="pic25" border="0"></a></td>
+		<td><a href="/GiftCerts/index.asp"><img height="26" width="149" src="/images/nav_certificate_off.gif" alt="Give the gift of health and safety" name="pic25" border="0"></a></td>
 
 	</tr>
 		<tr>
 
-		<td><a href="/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic1','document.pic1','/images/home2.gif','#944253403710')"><img height="27" width="149" src="/images/home1.gif" name="pic1" border="0"></a></td>
+		<td><a href="/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic1','document.pic1','/images/home2.gif','#944253403710')"><img height="27" width="149" alt="Return to www.consumerlab.com" src="/images/home1.gif" name="pic1" border="0"></a></td>
 
 	</tr>
 	<tr>
 
-		<td><a href="/results/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic2','document.pic2','/images/lab2.gif','#944253566620')"><img height="41" width="149" src="/images/lab1.gif" name="pic2" border="0"></a></td>
+		<td><a href="/results/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic2','document.pic2','/images/lab2.gif','#944253566620')"><img height="41" width="149" alt="Find out if the items you are taking have passed or failed our standards!" src="/images/lab1.gif" name="pic2" border="0"></a></td>
 
 	</tr>
 		<tr>
 
-		<td><a href="/news/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic8','document.pic8','/images/news2.gif','#944253794400')"><img height="26" width="149" src="/images/news1.gif" name="pic8" border="0"></a></td>
+		<td><a href="/news/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic8','document.pic8','/images/news2.gif','#944253794400')"><img height="26" width="149" alt="Click here for a listing of news releases" src="/images/news1.gif" name="pic8" border="0"></a></td>
 
 	</tr>
 		<tr>
 
-		<td><a href="/products.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic26','document.pic26','/images/products2.gif','#944253566620')"><img height="41" width="149" src="/images/products1.gif" name="pic26" border="0"></a></td>
+		<td><a href="/products.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic26','document.pic26','/images/products2.gif','#944253566620')"><img height="41" width="149" alt="Find out where to get the items you have seen" src="/images/products1.gif" name="pic26" border="0"></a></td>
 
 	</tr>
 	<tr>
 
-		<td><a href="/tnp.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic23','document.pic23','/images/nav_tnp2.gif','#944253566620')"><img height="38" width="149" src="/images/nav_tnp.gif" name="pic23" border="0"></a></td>
+		<td><a href="/tnp.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic23','document.pic23','/images/nav_tnp2.gif','#944253566620')"><img height="38" width="149" alt="The Natural Pharmacist encyclopedia, for Subscribers Only" src="/images/nav_tnp.gif" name="pic23" border="0"></a></td>
 
 	</tr>
 	<tr>
 
-		<td><a href="/recalls.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic21','document.pic21','/images/recalls2.gif','#944253566620')"><img height="26" width="149" src="/images/recalls.gif" name="pic21" border="0"></a></td>
+		<td><a href="/recalls.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic21','document.pic21','/images/recalls2.gif','#944253566620')"><img height="26" width="149" alt="Recalls and Warnings you need to know about!" src="/images/recalls.gif" name="pic21" border="0"></a></td>
 
 	</tr>
 		<tr>
 
-		<td><a href="/search_results.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic20','document.pic20','/images/searchsite2.gif','#944253566620')"><img height="26" width="149" src="/images/searchsite1.gif" name="pic20" border="0"></a></td>
+		<td><a href="/search_results.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic20','document.pic20','/images/searchsite2.gif','#944253566620')"><img height="26" width="149" alt="Search our site for reviews, products, and manufacturers" src="/images/searchsite1.gif" name="pic20" border="0"></a></td>
 
 	</tr>
 	<tr>
 
-		 <td><a href="/aboutcl.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic9','document.pic9','/images/aboutus2.gif','#944253810990')"><img height="26" width="149" src="/images/aboutus1.gif" name="pic9" border="0"></a></td>
+		 <td><a href="/aboutcl.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic9','document.pic9','/images/aboutus2.gif','#944253810990')"><img height="26" width="149" alt="About ConsumerLab.com" src="/images/aboutus1.gif" name="pic9" border="0"></a></td>
 
 	</tr>
 	<tr>
 
-		<td><a href="/seal.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic12','document.pic12','/images/clseal2.gif','#944253920290')"><img height="27" width="149" src="/images/clseal1.gif" name="pic12" border="0"></a></td>
+		<td><a href="/seal.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic12','document.pic12','/images/clseal2.gif','#944253920290')"><img height="27" width="149" alt="How to Read a ConsumerLab.com Approved Quality Product Seal" src="/images/clseal1.gif" name="pic12" border="0"></a></td>
 
 	</tr>
 			<tr>
 
-		<td><a href="/aboutcl.asp#testprog" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic16','document.pic16','/images/testprog2.gif','#944253753150')"><img height="26" width="149" src="/images/testprog1.gif" name="pic16" border="0"></a></td>
+		<td><a href="/aboutcl.asp#testprog" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic16','document.pic16','/images/testprog2.gif','#944253753150')"><img height="26" width="149" alt="About CL's Testing Programs" src="/images/testprog1.gif" name="pic16" border="0"></a></td>
 
 	</tr>
 
 	<tr>
 
-		<td><a href="/reports/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic24','document.pic24','/images/newreports2.gif','#944253753150')"><img height="38" width="149" src="/images/newreports1.gif" name="pic24" border="0"></a></td>
+		<td><a href="/reports/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic24','document.pic24','/images/newreports2.gif','#944253753150')"><img height="38" width="149" src="/images/newreports1.gif" alt="Technical Reports and Other Reports from ConsumerLab.com" name="pic24" border="0"></a></td>
 
 	</tr>
 		<tr>
 
-		<td><a href="/list.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic15','document.pic15','/images/joinlist2.gif','#944253843830')"><img height="27" width="149" src="/images/joinlist1.gif" name="pic15" border="0"></a></td>
+		<td><a href="/list.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic15','document.pic15','/images/joinlist2.gif','#944253843830')"><img height="27" width="149" alt="CL's FREE Email Newsletter" src="/images/joinlist1.gif" name="pic15" border="0"></a></td>
 
 	</tr>
 
 	<tr>
 
-		<td><a href="/contact.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic11','document.pic11','/images/contact2.gif','#944253843830')"><img height="26" width="149" src="/images/contact1.gif" name="pic11" border="0"></a></td>
+		<td><a href="/contact.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.pic11','document.pic11','/images/contact2.gif','#944253843830')"><img height="26" width="149" alt="Contact ConsumerLab.com" src="/images/contact1.gif" name="pic11" border="0"></a></td>
 
 	</tr>
 	
@@ -152,7 +152,7 @@ function MM_swapImage() { //v2.0
 <font face="arial" size="-2" color="#FFFFFF">Advertisement</font>
 </center><br><!-- <A HREF="/includes/clicks.asp?adid=14" TARGET="resource_window"><img align="middle" height="125" width="125" src="/images/tbv125x125_02.gif" border="0"></A> -->
 	<p><a href="/includes/clicks.asp?adid=15" target="resource_window"><img align="middle" height="125" width="125" src="/images/pc_bnr_125x125.gif" border="0"></a>
-	</p><p><a href="/includes/clicks.asp?adid=12" target="resource_window"><img align="middle" height="125" width="125" src="/images/wellnessinteractive.gif" border="0"></a>
+	<!-- <p><A HREF="/includes/clicks.asp?adid=12" TARGET="resource_window"><img align="middle" height="125" width="125" src="/images/wellnessinteractive.gif" border="0"></A> -->
 
 </p></td>
 </tr>
