myspace.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 10511,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.97,
  "homepage_snapshot_redirected_domain": "myspace.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041012084050id_/http://www.myspace.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041012084050id_/http%3A//myspace.com",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "myspace.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204233018id_/http%3A//www.myspace.com/misc/privacy.html%3Fz%3D1%26Mytoken%3D20040917113647",
  "policy_title": "MySpace.com >> Privacy Policy",
  "policy_url": "myspace.com/misc/privacy.html?z=1&Mytoken=20040917113647",
  "sha1": "8abdd03939561025fbc7b3a8311e9c9e91c13c66",
  "simhash": 6885439343578307655,
  "simhash_updated": false,
  "site_hostname": "myspace.com",
  "site_url": "http://myspace.com",
  "smog": 15.77,
  "strict_updated": true,
  "timestamp": "20041204233018",
  "word_count": 1683,
  "year": 2004
}

--- a/m/my/mys/myspace.com.html
+++ b/m/my/mys/myspace.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myspace.com privacy policy that was archived on 2004-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040619223652id_/http%3A//www.myspace.com/misc/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myspace.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204233018id_/http%3A//www.myspace.com/misc/privacy.html%3Fz%3D1%26Mytoken%3D20040917113647) for the most accurate reproduction.-->
 
 <html><head>
 		
@@ -35,7 +35,7 @@
 						<tbody><tr>
 							
           <td align="left" valign="top"> 
-            <p><font size="2" face="Verdana, Arial, Helvetica, sans-serif"><a href="https://www.truste.org/ivalidate.php?url=www.myspace.com"><img src="../images/clicksealwhitebckgrnd.gif" width="91" height="73" align="left" border="0" alt="MySpace is a licensee of the TRUSTe Privacy Program."></a><img src="../images/1by1.gif" width="10" height="82" align="left">MySpace 
+            <p><font size="2" face="Verdana, Arial, Helvetica, sans-serif"><a href="http://www.truste.org/ivalidate.php?url=www.myspace.com"><img src="../images/clicksealwhitebckgrnd.gif" width="91" height="73" align="left" border="0" alt="MySpace is a licensee of the TRUSTe Privacy Program."></a><img src="../images/1by1.gif" width="10" height="82" align="left">MySpace 
               is a licensee of the TRUSTe Privacy Program. TRUSTe is an independent, 
               non-profit organization whose mission is to enable individuals and 
               organizations to establish trusting relationships based on respect 
@@ -49,7 +49,7 @@
             <p><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Please 
               contact MySpace with questions regarding this statement. If the 
               website has not responded to your inquiry or your inquiry has not 
-              been satisfactorily addressed, please contact TRUSTe at <a href="http://www.truste.org/users/watchdog.html" target="_blank">http://www.truste.org/users/watchdog.html</a>. 
+              been satisfactorily addressed, please contact TRUSTe at <a href="http://www.truste.org/consumers/watchdog_complaint.php" target="_blank">http://www.truste.org/consumers/watchdog_complaint.php</a>. 
               </font></p>
             <p>&nbsp;</p>
             <p><font size="2" face="Verdana, Arial, Helvetica, sans-serif"><b>Effective 
