--- a/a/av/avo/avonfoundation.org.html
+++ b/a/av/avo/avonfoundation.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the avonfoundation.org privacy policy that was archived on 2004-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040608202136id_/http%3A//www.avoncompany.com//info/security.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the avonfoundation.org privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204234818id_/http%3A//www.avoncompany.com/info/security.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
