ceruleanstudios.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;chatandmessaging;informationtech",
  "char_count": 2232,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.26,
  "homepage_snapshot_redirected_domain": "ceruleanstudios.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929041007id_/http://www.ceruleanstudios.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929041007id_/http%3A//ceruleanstudios.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ceruleanstudios.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204235828id_/http%3A//www.ceruleanstudios.com/misc/privacy.php",
  "policy_title": "Cerulean Studios -> Privacy Policy",
  "policy_url": "ceruleanstudios.com/misc/privacy.php",
  "sha1": "6483c10e685861467876564b2caadc070f904c3b",
  "simhash": 590728304728376955,
  "simhash_updated": false,
  "site_hostname": "ceruleanstudios.com",
  "site_url": "http://ceruleanstudios.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204235828",
  "word_count": 383,
  "year": 2004
}

--- a/c/ce/cer/ceruleanstudios.com.html
+++ b/c/ce/cer/ceruleanstudios.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ceruleanstudios.com privacy policy that was archived on 2004-04-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040403213632id_/http%3A//ceruleanstudios.com/misc/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ceruleanstudios.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204235828id_/http%3A//www.ceruleanstudios.com/misc/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Cerulean Studios -&gt; Privacy Policy</title>
@@ -20,8 +20,11 @@ var bVer5 = (navigator.appVersion=="4.0 (compatible; MSIE 5.0; Macintosh; I; PPC
 var MNS6 = ((appVer == "5") && (MNS == true));
 var MNS4 = ((appVer == "4") && (MNS == true));
 var WNS6 = ((appVer == "5") && (WNS == true));
+var OP = (navigator.userAgent.indexOf("Opera")!=-1);
 
-if (bVer5) {
+if (OP) {
+	document.write("<LINK REL=stylesheet HREF=\"/css/win.css\" TYPE=\"text/css\">");
+	} else if (bVer5) {
 	document.write("<LINK REL=stylesheet HREF=\"/css/mac-ie5.css\" TYPE=\"text/css\">");
 	} else if (MNS6) {
 	// this next line was mac-ns6.css, but ajm changed it to mac on 9/16/2003
