--- a/f/fr/fre/freakingnews.com.html
+++ b/f/fr/fre/freakingnews.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the freakingnews.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610183640id_/http%3A//www.freakingnews.com/help.asp%3Fhelp%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freakingnews.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205000309id_/http%3A//www.freakingnews.com/help.asp%3Fhelp%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head><title>FreakingNews.com - News Photoshop Contests - hidden</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="copyright" content="© Copyright 6/10/2004 by FreakingNews.com. All rights reserved.">
+<meta name="copyright" content="© Copyright 12/4/2004 by FreakingNews.com. All rights reserved.">
 <meta name="keywords" content="news, photoshop contests, FreakingNews">
 <meta name="description" content="Real news presented in photoshopped photos, and captions.">
-<meta name="author" content="© Copyright 1999 - 6/10/2004, FreakingNews.com. All rights reserved.">
+<meta name="author" content="© Copyright 1999 - 12/4/2004, FreakingNews.com. All rights reserved.">
 
 <style>
 <!--
@@ -67,7 +67,6 @@ a            { text-decoration: underline }
 	color: #FF0000;
 	text-decoration: none;
 	}
-
 	.navover, A:link.navover, A:visited.navover {
 	font-family: Arial, helvetica, san-serif;
 	color: #FFFFFF;
@@ -81,11 +80,11 @@ a            { text-decoration: underline }
 	A:hover {color: #0099FF; text-decoration: none}
 	A:hover.poor  {color: #FF8282; text-decoration: none}
 	A:hover.poor2  {color: #FF8282; text-decoration: none}
-
 -->
 </style>
 
 <style>
+<!--
 .related {
         FONT-FAMILY: Times New Roman, Geneva, Arial
 }
@@ -98,63 +97,8 @@ A.related:visited {
 A.related:hover {
         COLOR: #FF0000; TEXT-DECORATION: underline
 }
+-->
 </style>
-
-<!-- BEGIN RICH-MEDIA BURST! CODE --> 
-<script language="JavaScript"> 
-<!-- /* Copyright 1997-2003 BURST! Media, LLC. All Rights Reserved. (Version 1.1J) */ 
-function ShowBurstAd(adcode, width, height, sizes, intrusive, bgcolor, background) {
-var bN = navigator.appName;
-var bV = parseInt(navigator.appVersion);
-var base='http://www.burstnet.com/';
-var Tv=''; var Itr='';
-var sz=''; var bkgd='';
-var bgc='';
-var vr='v=1.1J';
-var agt=navigator.userAgent.toLowerCase();
-
-if (sizes.length!=0) {sz='/sz='+sizes;} else {sz='';}
-if (bgcolor.length!=0) {bgc='/zg' + bgcolor;} else {bgc='';}
-if (background.length!=0) {bkgd='/bgi='+(escape(escape(background))).replace(/\//gi,'%252F');} else {bkgd='';}
-                            
-if (bV>=4) {
-  ts=window.location.pathname+window.location.search;
-  i=0; Tv=0; while (i< ts.length)
-    { Tv=Tv+ts.charCodeAt(i); i=i+1; } Tv="/"+Tv;
-} else {Tv=escape(window.location.pathname);
-  if( Tv.charAt(0)!='/' ) Tv="/"+Tv;
-    else if (Tv.charAt(1)=="/")
- Tv="";
-  if( Tv.charAt(Tv.length-1) == "/")
-   Tv = Tv + "_";
-}
-
-var fCode='<ifr'+'ame id="BURST" src="'+base+
- 'cgi-bin/ads/'+adcode+'.cgi/NI/if/'+vr+bgc+sz+bkgd+
- Tv+'/RETURN-CODE" width="'+width+'" height="'+
- height+'"'+'marginwidth="0" marginheight="0"'+
- 'hspace="0" vspace="0" frameborder="0" '+
- 'scrolling="no">';
- var gCode = '<'+'a href="'+base+'ads/'+adcode+'-map.cgi/'+
- vr+sz+Tv+'" target=_top><im'+'g src="'+base+
- 'cgi-bin/ads/'+adcode+'.cgi/'+vr+sz+Tv+
- '" border="0" alt="Click Here"></a>';
-var fCodeEnd = '</ifr'+'ame>';
-
-if ((adcode.charAt(0)=="a")&&(intrusive=="1")) {
- Itr='<di'+'v><scr'+'ipt src="'+base+'cgi-bin/ads/'+adcode+
- '.cgi/sz=0X0MN/'+vr+Tv+'/RETURN-CODE/JS/"></scr'+'ipt></d'+'iv>';
-}
-
-if (agt.indexOf("mac")==-1) {
-  document.write(fCode+gCode+fCodeEnd+Itr);
-} else {
-  document.write(gCode);
-}
-}
-//-->
-</script>
-<!-- END BURST CODE -->
 
 <style>
 <!--
@@ -209,12 +153,16 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=1,lo
 <!--End nav bar-->
 
 </td></tr></tbody></table></td></tr></tbody></table></td></tr><tr bgcolor="#000099"><td height="25"><table width="100%"><tbody><tr><td></td><td align="right"><font color="white" class="welcome3" size="2"><b><a href="/faq.asp" class="navover2">FAQ</a>&nbsp;|&nbsp;<a href="javascript:helpup('/livehelp.asp')" class="navover2">Live Help</a>&nbsp;|&nbsp;<a href="javascript:helpup('/popup.asp?contents=1')" class="navover2">Help Library</a>&nbsp;|&nbsp;<a href="/help.asp?help=advice" class="navover2">Guidelines</a>&nbsp;|&nbsp;<a href="/help.asp?help=legal" class="navover2">User Agreement</a>&nbsp;|&nbsp;<a href="/help.asp?help=privacy" class="navover2">Privacy Policy</a>&nbsp;|&nbsp;<a href="/help.asp?help=copyright" class="navover2">Legal Claims</a>&nbsp;|&nbsp;<a href="/message.asp?uid=2" class="navover2">Contact Us</a>&nbsp;</b></font></td></tr></tbody></table></td></tr><tr><td align="left"><table cellpadding="3" cellspacing="0"><tbody><tr><td><!-- BEGIN RICH-MEDIA BURST! CODE --> 
-<script language="JavaScript">
-<!--
-ShowBurstAd('ad10684a','728','90','468x60A|728x90A','2', 'FFFFFF', 'http://www.top-greetings.com/1/leaderboard.gif');
-// --></script><iframe id="BURST" src="http://www.burstnet.com/cgi-bin/ads/ad10684a.cgi/NI/if/v=1.1J/zgFFFFFF/sz=468x60A|728x90A/bgi=http%253A%252F%252Fwww.top-greetings.com%252F1%252Fleaderboard.gif/6560/RETURN-CODE" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><a href="http://www.burstnet.com/ads/ad10684a-map.cgi/v=1.1J/sz=468x60A|728x90A/6560" target=_top><img src="http://www.burstnet.com/cgi-bin/ads/ad10684a.cgi/v=1.1J/sz=468x60A|728x90A/6560" border="0" alt="Click Here"></a></iframe><noscript><a href="http://www.burstnet.com/ads/ad10684a-map.cgi/ns/v=1.1J/sz=468x60A|728x90A/" target="_top">
-<img src="http://www.burstnet.com/cgi-bin/ads/ad10684a.cgi/ns/v=1.1J/sz=468x60A|728x90A/" border="0" alt="Click Here"></a> 
+<script language="JavaScript"> 
+rnum=Math.round(Math.random() * 100000);
+ 
+document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad10684a.cgi/v=2.0S/sz=468x60A|728x90A/'+rnum+'/NI/RETURN-CODE/JS/"></scr'+'ipt>');
+ 
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad10684a.cgi/v=2.0S/sz=468x60A|728x90A/32807/NI/RETURN-CODE/JS/"></script>
+<noscript><a href="http://www.burstnet.com/ads/ad10684a-map.cgi/ns/v=2.0S/sz=468x60A|728x90A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad10684a.cgi/ns/v=2.0S/sz=468x60A|728x90A/" border="0" alt="Click Here"></a>
 </noscript>
+ 
 <!-- END BURST CODE -->
 </td></tr></tbody></table></td></tr></tbody></table><table width="765" cellpadding="0" cellspacing="0"><tbody><tr class="welcome3"><td>
 
@@ -364,7 +312,7 @@ policy separately before clicking on any advertisements.</font></p>
 the practices of FreakingNews.com, or your dealings on our web site, please <a href="/message.asp?uid=2">contact
 us</a>.</font></font></p>
 
-</td></tr></tbody></table><p align="left" class="welcome3"><br><br> <a href="http://www.freakingnews.com/default.asp" class="contesttype">home</a> -  <a href="http://www.freakingnews.com/register.asp" class="contesttype">register</a> -  <a href="http://www.freakingnews.com/login.asp" class="contesttype">login</a> -  <a href="http://www.freakingnews.com/cdir.asp" class="contesttype">contests</a> -  <a href="http://www.freakingnews.com/search.asp" class="contesttype">library</a> -  <a href="http://www.freakingnews.com/galleries.asp" class="contesttype">galleries</a> -  <a href="http://www.freakingnews.com/stories/bb.asp" class="contesttype">community</a> - <a href="http://www.freakingnews.com/faq.asp" class="contesttype">help</a><br> <a href="/faq.asp" class="contesttype">help</a> -  <a href="/help.asp?help=advice" class="contesttype">guidelines</a> -  <a href="/help.asp?help=legal" class="contesttype">terms of service</a> -  <a href="/help.asp?help=privacy" class="contesttype">privacy</a> -  <a href="/help.asp?help=copyright" class="contesttype">claims</a> -  <a href="/message.asp?uid=2" class="contesttype">contact</a> - <a href="#w1ktop" class="contesttype">^top</a><br><br><table width="765" align="left"><tbody><tr class="welcome3"><td align="center" valign="top"><b><font class="welcome3"><a href="/online.asp">Currently Browsing</a></font></b><font class="welcome3">: 170 guests 4 members 3 jurors 3 admins | <a class="poor" href="/stats/" target="_blank">15470</a> visitors today</font><br><font color="#808080">© 2004, <a href="/default.asp">FreakingNews.com</a>. All rights reserved. Page generated at 6/10/2004 2:33:24 PM in 0.063 seconds.<br><a href="http://www.worth1000.com">Code by Worth1000</a>.<br> <a href="http://www.lukol.com/Top/" target="_blank">LUKOL Directory</a> / <a href="http://www.lukol.com/Top/Arts/" target="_blank">Arts</a> / <a href="http://www.lukol.com/Top/Business/" target="_blank">Business</a> / <a href="http://www.lukol.com/Top/Computers/" target="_blank">Computers</a> / <a href="http://www.lukol.com/Top/Games/" target="_blank">Games</a> / <a href="http://www.lukol.com/Top/Health/" target="_blank">Health</a> / <a href="http://www.lukol.com/Top/Home/" target="_blank">Home</a> / <a href="http://www.lukol.com/Top/Kids_and_Teens/" target="_blank">Kids and Teens</a> / <a href="http://www.lukol.com/Top/News/" target="_blank">News</a> / <a href="http://www.lukol.com/Top/Recreation/" target="_blank">Recreation</a> / <a href="http://www.lukol.com/Top/Reference/" target="_blank">Reference</a> / <a href="http://www.lukol.com/Top/Regional/" target="_blank">Regional</a> / <a href="http://www.lukol.com/Top/Science/" target="_blank">Science</a> / <a href="http://www.lukol.com/Top/Shopping/" target="_blank">Shopping</a> / <a href="http://www.lukol.com/Top/Society/" target="_blank">Society</a> / <a href="http://www.lukol.com/Top/Sports/" target="_blank">Sports</a> / <a href="http://www.lukol.com/Top/World/" target="_blank">World</a> / <a href="http://www.top-greetings.com" target="_blank">Today's Jokes</a> / <a href="http://www.ecardsaddict.com" target="_blank">Top Ecards and Greeting Sites</a></font></td></tr></tbody></table>
+</td></tr></tbody></table><p align="left" class="welcome3"><br><br> <a href="http://www.freakingnews.com/default.asp" class="contesttype">home</a> -  <a href="http://www.freakingnews.com/register.asp" class="contesttype">register</a> -  <a href="http://www.freakingnews.com/login.asp" class="contesttype">login</a> -  <a href="http://www.freakingnews.com/cdir.asp" class="contesttype">contests</a> -  <a href="http://www.freakingnews.com/search.asp" class="contesttype">library</a> -  <a href="http://www.freakingnews.com/galleries.asp" class="contesttype">galleries</a> -  <a href="http://www.freakingnews.com/stories/bb.asp" class="contesttype">community</a> - <a href="http://www.freakingnews.com/faq.asp" class="contesttype">help</a><br> <a href="/faq.asp" class="contesttype">help</a> -  <a href="/tutorial.asp" class="contesttype">tutorials</a> -  <a href="/help.asp?help=advice" class="contesttype">guidelines</a> -  <a href="/help.asp?help=legal" class="contesttype">terms of service</a> -  <a href="/help.asp?help=privacy" class="contesttype">privacy</a> -  <a href="/help.asp?help=copyright" class="contesttype">claims</a> -  <a href="/message.asp?uid=2" class="contesttype">contact</a> - <a href="#w1ktop" class="contesttype">^top</a><br><br><table width="765" align="left"><tbody><tr class="welcome3"><td align="center" valign="top"><b><font class="welcome3"><a href="/online.asp">Currently Browsing</a></font></b><font class="welcome3">: 69 guests 7 members 1 jurors 1 admins | <a class="poor" href="/stats/" target="_blank">18619</a> visitors today</font><br><font color="#808080">© 2004, <a href="/default.asp">FreakingNews.com</a>. All rights reserved. Page generated at 12/4/2004 7:06:35 PM in 0.016 seconds.<br><a href="http://www.worth1000.com" target="_blank">Code by Worth1000</a>.<br> <a href="http://www.lukol.com/Top/" target="_blank">LUKOL Directory</a> / <a href="http://www.lukol.com/Top/Arts/" target="_blank">Arts</a> / <a href="http://www.lukol.com/Top/Business/" target="_blank">Business</a> / <a href="http://www.lukol.com/Top/Computers/" target="_blank">Computers</a> / <a href="http://www.lukol.com/Top/Games/" target="_blank">Games</a> / <a href="http://www.lukol.com/Top/Health/" target="_blank">Health</a> / <a href="http://www.lukol.com/Top/Home/" target="_blank">Home</a> / <a href="http://www.lukol.com/Top/Kids_and_Teens/" target="_blank">Kids and Teens</a> / <a href="http://www.lukol.com/Top/News/" target="_blank">News</a> / <a href="http://www.lukol.com/Top/Recreation/" target="_blank">Recreation</a> / <a href="http://www.lukol.com/Top/Reference/" target="_blank">Reference</a> / <a href="http://www.lukol.com/Top/Regional/" target="_blank">Regional</a> / <a href="http://www.lukol.com/Top/Science/" target="_blank">Science</a> / <a href="http://www.lukol.com/Top/Shopping/" target="_blank">Shopping</a> / <a href="http://www.lukol.com/Top/Society/" target="_blank">Society</a> / <a href="http://www.lukol.com/Top/Sports/" target="_blank">Sports</a> / <a href="http://www.lukol.com/Top/World/" target="_blank">World</a> / <a href="http://www.top-greetings.com" target="_blank">Today's Jokes</a> / <a href="http://www.ecardsaddict.com" target="_blank">Top Ecards and Greeting Sites</a></font></td></tr></tbody></table>
 
 
 </p></body></html>
