--- a/b/ba/bal/baltimorecity.gov.html
+++ b/b/ba/bal/baltimorecity.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the baltimorecity.gov privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401153436id_/http%3A//baltimorecity.gov/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the baltimorecity.gov privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205001117id_/http%3A//www.baltimorecity.gov/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
