--- a/s/se/sec/secure-tunnel.com.html
+++ b/s/se/sec/secure-tunnel.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the secure-tunnel.com privacy policy that was archived on 2004-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040612062913id_/http%3A//secure-tunnel.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the secure-tunnel.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205001230id_/http%3A//www.secure-tunnel.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -47,7 +47,7 @@ function MM_preloadImages() { //v3.0
 
 
 
-<body bgcolor="#777777" background="images/bg.gif" link="#66CCCC" vlink="#66CCCC" alink="#66CCCC" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('../st002/images/bg.gif','../st002/images/logo.gif')">
+<body bgcolor="#777777" background="images/bg.gif" link="#66CCCC" vlink="#66CCCC" alink="#66CCCC" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
 <div align="center">
 
