--- a/p/pu/pun/punoftheday.com.html
+++ b/p/pu/pun/punoftheday.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the punoftheday.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604035120id_/http%3A//punoftheday.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the punoftheday.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205002348id_/http%3A//www.punoftheday.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>Pun of the Day: About this site</title></head>
 
