--- a/c/ch/che/cheatchannel.com.html
+++ b/c/ch/che/cheatchannel.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cheatchannel.com privacy policy that was archived on 2004-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040402020111id_/http%3A//cheatchannel.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cheatchannel.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205002606id_/http%3A//www.cheatchannel.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 
