--- a/l/lo/los/loseit.com.html
+++ b/l/lo/los/loseit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the loseit.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610151112id_/http%3A//www.loseit.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the loseit.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205002801id_/http%3A//loseit.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title> Herbalife Independent Distributor, Ronalee Wise. </title>
@@ -9,8 +9,7 @@
 </head>
 <body topmargin="0" link="#008080" vlink="#008080" alink="#008080" leftmargin="0"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td>
 
-<p align="center"><b><a href="customersuccess/index.html">
-<img border="0" src="customersuccess/table.jpg" width="177" height="27"></a></b></p>
+<p align="center">&nbsp;</p>
 
 </td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table dir="ltr" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td valign="top" width="1%">
 
