femalenetwork.com (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;entertainment",
  "char_count": 9384,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.48,
  "homepage_snapshot_redirected_domain": "femalenetwork.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040930232850id_/http://www.femalenetwork.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040930232850id_/http%3A//femalenetwork.com",
  "interval": "2004_B",
  "link_text": "Our Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "femalenetwork.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205004320id_/http%3A//www.femalenetwork.com/about/privacy",
  "policy_title": "FemaleNetwork.com | My life. My community.",
  "policy_url": "femalenetwork.com/about/privacy",
  "sha1": "cc4754ac74f7237ba0d6ed1ef4dcae0ddfcbed3e",
  "simhash": 899914812710333706,
  "simhash_updated": true,
  "site_hostname": "femalenetwork.com",
  "site_url": "http://femalenetwork.com",
  "smog": 13.45,
  "strict_updated": true,
  "timestamp": "20041205004320",
  "word_count": 1461,
  "year": 2004
}

--- a/f/fe/fem/femalenetwork.com.html
+++ b/f/fe/fem/femalenetwork.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the femalenetwork.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603020007id_/http%3A//www.femalenetwork.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the femalenetwork.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205004320id_/http%3A//www.femalenetwork.com/about/privacy) for the most accurate reproduction.-->
 
 <html><head></head><body bgcolor="#FFFFFF" text="#000000" link="#cc3333" vlink="#cc3333" alink="#cc3333" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0"><base href="http://www.femalenetwork.com/about/privacy/"><link rel="SHORTCUT ICON" href="http://www.femalenetwork.com/fn.ico"><meta name="description" content="FemaleNetwork.com is the first 
 Philippine website for women and the online home of Cosmopolitan Philippines. 
@@ -973,7 +973,8 @@ else {
 
 </tr></tbody></table><table border="0" cellpadding="0" cellspacing="0" width="600">
 <tbody><tr>
-	<td><a href="http://www2.femalenetwork.com/cgi-bin/banner/bcount.cgi?mode=go&amp;id=1670"><img src="http://www.femalenetwork.com/admanager468fd/June_T3" border="0"></a>&nbsp;&nbsp;<a href="http://www2.femalenetwork.com/cgi-bin/banner/bcount.cgi?mode=go&amp;id=1502"><img src="http://www.femalenetwork.com/admanager120/Childrens%20Hour" border="0"></a>
+	<td><a href="http://www2.femalenetwork.com/cgi-bin/banner/bcount.cgi?mode=go&amp;id=1596"><img src="http://www.femalenetwork.com/admanager468fd/Real%20Living" border="0"></a>
+&nbsp;&nbsp;<a href="http://www2.femalenetwork.com/cgi-bin/banner/bcount.cgi?mode=go&amp;id=1584"><img src="http://www.femalenetwork.com/admanager120/Postcards%20From%20Everyone" border="0"></a>
 
 </td>
 </tr>
@@ -1019,7 +1020,7 @@ else {
                 <a name="toptop"><p style="line-height:15pt"><font face="verdana, arial" size="2"><b>Our Privacy Policy</b></font>
 
 
-                </p><p style="line-height:15pt"><font face="verdana," arial="" size="2">At FemaleNetwork.com, we are committed to protecting your privacy. All the personal information you share with us is used strictly to enhance your FemaleNetwork.com experience. If you participate in contests or promotional features, only demographic information will be reported to the sponsors unless you stated your interest in receiving more information from the sponsors.
+                </p><p style="line-height:15pt"><font face="verdana," arial="" size="2">Welcome to FemaleNetwork.com and GIRLTalk! We’re glad to have you in our community and we hope you’ll have a great time. At FemaleNetwork.com, we are committed to protecting your privacy. All the personal information you share with us is used strictly to enhance your FemaleNetwork.com experience. If you participate in contests or promotional features, only demographic information will be reported to the sponsors unless you stated your interest in receiving more information from the sponsors. 
 
                 </font></p></a><p style="line-height:15pt"><a name="toptop"><font face="verdana," arial="" size="2">This document will shed light on all your questions about your activities on FemaleNetwork.com. Please read on for more details about our privacy policy.
 
@@ -1040,11 +1041,11 @@ else {
 
                 <a name="collectinfo">
                 </a></font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a name="collectinfo"><b>What information do we collect? How do we use it?</b><br>
-                1. When you register to become a FemaleNetwork.com member, we ask for your name, gender, birthday, marital status, educational attainment, location, occupation, and name of school/employer. We also ask you to answer some simple questions about your lifestyle and personal preferences, such as Internet usage and hobbies. We use this information to create a profile of our members that will help us develop our features and services. This profile will be presented as general demographics in our media kit and other advertising materials. We do not sell, trade, or rent your personal information to others. We only provide personal information to sponsors if you specify your interest in receiving information from the sponsors.
+                1. When you register to become a FemaleNetwork.com member, we ask for your name, gender, birthday, marital status, educational attainment, location, occupation, personal income/monthly allowance and name of school/employer. We also ask you to answer some simple questions about your lifestyle and personal preferences, such as Internet usage and hobbies. We use this information to create a profile of our members that will help us develop our features and services. This profile will be presented as general demographics in our media kit and other advertising materials. We do not sell, trade, or rent your personal information to others. We only provide personal information to sponsors if you specify your interest in receiving information from the sponsors.
 
                 </a></font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a name="collectinfo">2. When you subscribe to any of our newsletters (Femail, Sweet Reminders, etc.), all we need is your email address, which is used to send your chosen newsletter.
 
-                </a></font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a name="collectinfo">3. To create topics and post messages in GIRLTalk, our message boards, you should be a registered FemaleNetwork.com member. Your username is displayed with every message you post. Other members of the FemaleNetwork.com community may send you email. Your username serves as a hyperlink to your email address. When you register, you may choose not to have your email address appear as a hyperlink. (</a><a href="bbsrules.html">Read the complete GIRLtalk house rules</a>.)
+                </a></font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a name="collectinfo">3. To create topics and post messages in GIRLTalk, our message boards, you should be a registered GIRLTalk member. Guests may peruse some of the sections but will not be able to post. Your username is displayed alongside your post and your email address will not be disclosed to anyone (</a><a href="http://www2.femalenetwork.com/board/viewforum.php?f=3">Read the complete GIRLTalk house rules</a>.)
 
                 </font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2">We may republish your GIRLTalk posts to enrich FemaleNetwork.com content. If we do so, we will notify you. Republished posts will be identified only by usernames alone. We promise to be very sensitive in this effort. (<a href="bbsrules.html">See details on republication of GIRLtalk posts</a>.)
 
@@ -1054,7 +1055,7 @@ else {
 
                 </font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2">5. We may also use the information we collect to occasionally notify you about important functionality changes to our website, new services, and special offers we think you'll find valuable.  If you would rather not receive this information, visit your personal Member Profile page to change your preferences. Make sure to change your preferences for each account or email address you have left with us.
 
-                </font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2">6. When you send a greeting through FemaleNetwork.com e-Cards, we ask for your email address and that of the recipient in order to complete your request. FemaleNetwork.com will never disclose or send promotional email to recipient addresses provided only to the FemaleNetwork.com e-Card service.
+                <!--p style="line-height:15pt">6. When you send a greeting through FemaleNetwork.com e-Cards, we ask for your email address and that of the recipient in order to complete your request. FemaleNetwork.com will never disclose or send promotional email to recipient addresses provided only to the FemaleNetwork.com e-Card service.-->
 
                 </font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a href="#TOP"><img src="images/arrowup.gif" align="center" border="0" alt="to the top"></a>
 
@@ -1072,7 +1073,7 @@ else {
                 </a></font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a name="teens"><b>Teens on FemaleNetwork.com</b><br>
                 FemaleNetwork.com is the home of Candymag.com, a website for teen girls. We take special precautions in protecting the privacy of our young readers. While we expect parents to talk to their children about staying safe on the Internet and to provide constant guidance, we also take active steps to educate and protect our young members. We provide informative feature articles on the subject of online safety and set up strict rules for their online community. We never censor discussion on GIRLTalk or in the chatrooms; however, we do monitor them closely for offensive, abusive, and threatening messages. We also provide "hotlines" (by telephone, fax, Web and email) that are dedicated to assisting and guiding our young members.
 
-                </a></font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a name="teens">(Are you a teen? </a><a href="safety.html">Read "CyberSafety</a>," a primer on protecting yourself on the Internet.)
+                </a></font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a name="teens">(Are you a teen? </a><a href="http://www.candymag.com/aboutus/cybersafety.php">Read "CyberSafety</a>," a primer on protecting yourself on the Internet.)
 
                 </font></p><p style="line-height:15pt"><font face="verdana," arial="" size="2"><a href="#TOP"><img src="images/arrowup.gif" align="center" border="0" alt="to the top"></a>
 
@@ -1133,7 +1134,7 @@ else {
 <!-- Footer Banners -->
 <table border="0" cellpadding="0" cellspacing="0" width="600">
 <tbody><tr>
-	<td><a href="http://www2.femalenetwork.com/cgi-bin/banner/bcount.cgi?mode=go&amp;id=1203"><img src="http://www.femalenetwork.com/admanager468/cherryspicks" border="0"></a>&nbsp;&nbsp;<a href="http://www2.femalenetwork.com/cgi-bin/banner/bcount.cgi?mode=go&amp;id=1502"><img src="http://www.femalenetwork.com/admanager120/Childrens%20Hour" border="0"></a>
+	<td><a href="http://www2.femalenetwork.com/cgi-bin/banner/bcount.cgi?mode=go&amp;id=1203"><img src="http://www.femalenetwork.com/admanager468/cherryspicks" border="0"></a>&nbsp;&nbsp;<a href="http://www2.femalenetwork.com/in-mag/"><img src="http://www.femalenetwork.com/admanager120/Inmag" border="0"></a>
 
 </td>
 </tr>
