--- a/i/ip/ipw/ipwatchdog.com.html
+++ b/i/ip/ipw/ipwatchdog.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ipwatchdog.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606095209id_/http%3A//ipwatchdog.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ipwatchdog.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205005103id_/http%3A//www.ipwatchdog.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
   <!-- $MVD$:app("MicroVision WebExpress","769") -->
