--- a/s/se/sex/sexualastrology.com.html
+++ b/s/se/sex/sexualastrology.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the sexualastrology.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603094940id_/http%3A//www.sexualastrology.com/privacy_statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sexualastrology.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205005117id_/http%3A//www.sexualastrology.com/privacy_statement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Sexual Astrology - Privacy Statement</title>
 <meta name="ROBOTS" content="NO INDEX">   
-<meta name="keywords" content="astrology, sexual, horoscope, monthly, daily, yearly, love, life, zodiac, 2004, sexual compatibility, free, reading, love, sign, chinese, chart, daily, aries, taurus, gemini, cancer, leo, virgo, libra, scorpio, sagittarius, capricorn, aquarius, pisces, reading, rat, ox, tiger, rabbit, dragon, sanke, horse, lamb, monkey, rooster, dog, pig">
+<meta name="keywords" content="astrology, sexual, horoscope, monthly, daily, yearly, love, life, zodiac, 2004, sexual compatibility, reading, love, sign, chinese, chart, daily, aries, taurus, gemini, cancer, leo, virgo, libra, scorpio, sagittarius, capricorn, aquarius, pisces, reading, rat, ox, tiger, rabbit, dragon, sanke, horse, lamb, monkey, rooster, dog, pig">
 <meta name="description" content="Contact Sexual Astrology - read how the stars influence your sex life. Sexual compatibility between astrological signs, 2004 yearly, monthly and daily horoscopes and forecasts. Also chinese astrology and and astrology archive.">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 <style type="text/css">BODY {
@@ -23,14 +23,15 @@
 <tbody><tr>
     <td><p align="left"><a href="http://www.sexualastrology.com/"><img border="0" src="images/logo45.gif" width="350" height="200" alt="sexual astrology - horoscopes love and sexual astrology"></a></p></td>
     <td align="center">
-	<table align="center" width="95%" cellspacing="2" cellpadding="2" border="0">
+	<!--table ad beginning-->
+<font color="Red"><b><font size="-2"><div align="center"><font face="Verdana"> ...READ HOW THE STARS AFFECT <u>YOUR SEX</u> LIFE... </font></div></font></b></font><table align="center" width="95%" cellspacing="2" cellpadding="2" border="0">
 <tbody><tr>
     <td bgcolor="#ff0000">
 	<table align="center" width="99%" cellspacing="1" cellpadding="1" border="0">
 <tbody><tr>
-    <td bgcolor="#000000"><font size="+1" color="white"><font face="Verdana" color="Red">
-	<div align="center"><a c="" class="sidenav" href="horoscope_signup.html">
-	<img src="images/new_arrow.gif" width="37" height="15" alt="Get Your Personal Sexual Astrology Horoscope NOW!" border="0"></a> ! FOR LIMITED TIME ONLY !</div></font>
+    <td background="images/horoscope_bkgr.jpg"><font size="2" color="white"><font face="Verdana" color="Red">
+	<div align="center"><a class="sidenav" href="horoscope_signup.html">
+	<img src="images/new_arrow.gif" width="37" height="15" alt="Get Your Personal Sexual Astrology Horoscope NOW!" border="0"></a><b>SEXUAL ASTROLOGY COUPLE REPORT<br>SEXUAL ASTROLOGY SINGLE REPORT<br>CAUGHT BETWEEN 2 LOVERS REPORT<br>PERSONAL CUSTOM MONTHLY REPORT</b><br><u><font color="White">NOW</font></u><font color="White"> YOU CAN <u>CHOOSE FROM</u></font><br><a class="Content2 " href="horoscope_signup.html"> DIFFERENT PERSONALIZED REPORTS</a></div></font>
 	</font></td>
 </tr>
 </tbody></table>
@@ -42,13 +43,14 @@
 <tbody><tr>
     <td bgcolor="#ffffff"><font size="3" face="Verdana" color="red">
 	<div align="center"><b>Get Your <u>Personalized Horoscope</u><br><a class="sidenav" href="horoscope_signup.html">
-	Personal Sexual Astrology Reading</a><br><font size="-2" color="black">by Elizabeth Ellis NOW!</font></b><br>
+	Personal Sexual Astrology Readings</a><br><font size="-2" color="black"> NOW!</font></b><br>
 	<a c="" class="sidenav" href="horoscope_signup.html">...click here for more info</a>
 	
 	
 	</div></font></td>
 </tr>
 </tbody></table>
+<!--table ad end-->	
 
 	
 	
@@ -94,11 +96,15 @@
 	<br>
 	<a href="monthly_horoscopes.html" class="Content2">Monthly Horoscopes</a>
 	<br>
-	<a href="daily_horoscope.html" class="Content2">Daily Horoscopes</a><br>
+	<a href="weekly_horoscope.html" class="Content2">Weekly Horoscopes</a><br>
+	<br>
+        <a href="zodiac_horoscope.html" class="Content2">The Signs/Zodiac</a><br>
 	<br>
 	<a href="chinese_horoscope.html" class="Content2">Chinese Horoscopes</a>
 	<br>
 	<a href="horoscope_archive.html" class="Content2">Horoscope Archive</a><br>
+	<br>
+	<a href="opposites_attract.html" class="Content2">Opposites Attract</a><br>
 	<br>
 	<a href="solar_lunar_eclipses.html" class="Content2">Solar and Lunar Eclipses</a><br>
 	<br>
@@ -234,11 +240,26 @@
 
 
 </font></span></td>
-    <td valign="top" align="center" width="135" background="images/horoscope_astrology_bkgr2.jpg">
+    <td valign="top" align="left" width="135" background="images/horoscope_astrology_bkgr2.jpg">
 	
-	<!-- banner 1 -->	
+	 
 	
-	<!-- banner 1 -->	
+	<span class="Content8">
+	<a href="horoscope_signup.html" class="Content8">Personalized Astrology Reports</a><br>
+	<br>
+	<a href="horoscope_sexual_astrology.html" class="Content8">Sexual Astrology Report (Single)</a><br>
+	<br>
+	<a href="horoscope_couple_report.html" class="Content8">Sexual Astrology Couple Report (Synastry)</a><br>
+	<br>
+	<a href="horoscope_2_lovers.html" class="Content8">Caught<br>Between Two Lovers?</a><br>
+	<br>
+	<a href="horoscope_monthly_personal.html" class="Content8">Monthly Personalized Horoscope</a>
+	<br>
+	<br>
+	<a href="http://www.sexualastrology.com/tarot_reading.html" class="Content8" target="_blank">Get Your<br>Tarot Reading NOW!</a>
+	<br>
+	<br><br><br>
+		<!-- banner 1 -->	
 	
 	<script type="text/javascript"><!--
 google_ad_client = "pub-7665205247826540";
@@ -260,7 +281,7 @@ google_color_text = ["000000","FFFFFF","CCCCCC","FFFFFF"];
 	
 	
 	
-	</td>
+	</span></td>
 </tr>
 </tbody></table>
 <br><br>
@@ -271,7 +292,7 @@ google_color_text = ["000000","FFFFFF","CCCCCC","FFFFFF"];
 <!--banner start-->
 
 
-<a href="http://www.free-tarot-reading.net/?affID=2044"><img src="http://www.free-tarot-reading.net/assets/site_graphics/banners/grandmawhite.gif" alt="Lotus Tarot" width="468" height="60" border="0"></a>
+<a href="http://www.sexualastrology.com/tarot_reading.html"><img src="http://www.free-tarot-reading.net/assets/site_graphics/banners/grandmawhite.gif" alt="Lotus Tarot" width="468" height="60" border="0"></a>
 
 
 
@@ -283,7 +304,7 @@ google_color_text = ["000000","FFFFFF","CCCCCC","FFFFFF"];
 
 			<tr><td align="middle"><font color="#ffffff"> | <a href="index.html" class="topnav">Home</a> | 
                         <a href="2004_horoscopes.html" class="topnav">2004 Horoscopes</a> | 
-			            <a href="daily_horoscope.html" class="topnav">Daily Horoscopes</a> | 
+			            <a href="zodiac_horoscope.html" class="topnav">Zodiac Signs</a> | 
 						<a href="monthly_horoscopes.html" class="topnav">Monthly Horoscopes</a> | 
                         <a href="chinese_horoscope.html" class="topnav">Chinese Horoscopes</a> | <br>
 						 | <a href="sexual_compatibility.html" class="topnav">Sexual Compatibility</a> |
