--- a/w/we/wei/weightoffnow.com.html
+++ b/w/we/wei/weightoffnow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the weightoffnow.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604024138id_/http%3A//www.weightoffnow.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the weightoffnow.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205005218id_/http%3A//weightoffnow.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
