--- a/s/sy/syn/synergentcorp.com.html
+++ b/s/sy/syn/synergentcorp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the synergentcorp.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607041901id_/http%3A//synergentcorp.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the synergentcorp.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205011525id_/http%3A//www.synergentcorp.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head><title>Synergent Corporation - Privacy Statement</title>
 <link rel="stylesheet" href="style.css">
