--- a/l/lu/lup/lupus.org.html
+++ b/l/lu/lup/lupus.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lupus.org privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602211352id_/http%3A//www.lupus.org/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lupus.org privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205011856id_/http%3A//lupus.org/about/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/about.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -215,4 +215,4 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </tbody></table>
 
 <!-- #EndTemplate -->
-</body></html>
+<center><font color="#FFFFFF" size="1">Powered by </font><a href="http://www.isproductions.net"><font color="#FFFFFF" size="1">ISProductions</font></a></center></body></html>
