bizchannel.com.my (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 19083,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.69,
  "homepage_snapshot_redirected_domain": "bizchannel.com.my",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040925192425id_/http://www.bizchannel.com.my/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040925192425id_/http%3A//bizchannel.com.my",
  "interval": "2004_B",
  "link_text": "SECURITY, PRIVACY & CLIENT CHARTER",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bizchannel.com.my",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205012604id_/http%3A//www.bizchannel.com.my/security_privacy_client.html",
  "policy_title": "BizChannel - Security, Privacy & Client Charter",
  "policy_url": "bizchannel.com.my/security_privacy_client.html",
  "sha1": "76df6f5f41d044d39c6ce164ef6837425c042a8d",
  "simhash": 16568358789186691548,
  "simhash_updated": false,
  "site_hostname": "bizchannel.com.my",
  "site_url": "http://bizchannel.com.my",
  "smog": 18.17,
  "strict_updated": false,
  "timestamp": "20041205012604",
  "word_count": 2976,
  "year": 2004
}

--- a/b/bi/biz/bizchannel.com.my.html
+++ b/b/bi/biz/bizchannel.com.my.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bizchannel.com.my privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603105527id_/http%3A//www.bizchannel.com.my/security_privacy_client.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bizchannel.com.my privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205012604id_/http%3A//www.bizchannel.com.my/security_privacy_client.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>BizChannel - Security, Privacy &amp; Client Charter</title>
@@ -75,7 +75,7 @@
 </tbody></table>
 
 
-<!-- $Id: ssi_header.ssi,v 1.15 2002/12/23 01:46:34 jason Exp $ -->
+<!-- $Id: ssi_header.ssi,v 1.1 2004/02/27 02:44:04 kokwei Exp $ -->
 
 
 <table border="0" align="CENTER" cellspacing="0" cellpadding="0" width="720">
@@ -591,10 +591,10 @@
 </td>
 </tr>
 </tbody></table>
-<!-- $Id: ssi_footer.ssi,v 1.7 2002/09/14 04:15:18 kokwei Exp $ -->
+<!-- $Id: ssi_footer.ssi,v 1.1 2004/02/27 02:44:04 kokwei Exp $ -->
 
 
 
 
-<!-- $Id: security_privacy_client.html,v 1.8 2002/04/10 06:26:42 joe Exp $ -->
+<!-- $Id: security_privacy_client.html,v 1.1 2004/02/27 02:41:59 kokwei Exp $ -->
 </body></html>
