--- a/p/pr/pro/prosportsdaily.com.html
+++ b/p/pr/pro/prosportsdaily.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the prosportsdaily.com privacy policy that was archived on 2004-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040609180748id_/http%3A//prosportsdaily.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prosportsdaily.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205013431id_/http%3A//prosportsdaily.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Pro Sports Daily's Privacy Policy</title>
@@ -18,7 +18,7 @@
 Pro Sports Daily automatically saves information collected from visitors into our log files. This information includes the users' IP address, web agent, referral link, and pages visited. None of this information will ever be sold or shared.
 <br><br>
 
-Our ad affiliates also collect user info. <a href="http://www.fastclick.com/co_privacy.html" class="fr">Click here</a> and <a href="http://www.valueclick.com/privacy.html" class="fr">here</a> to read their privacy policies.
+Our ad affiliates also collect user info. <a href="http://www.fastclick.com/co_privacy.html" class="fr">Click here</a>, <a href="http://www.valueclick.com/privacy.html" class="fr">here</a> and <a href="http://www.google.com/privacy.html" class="fr">here</a> to read their privacy policies.
 <br><br>
 
 If you have any questions, <script type="text/javascript">
@@ -42,6 +42,6 @@ while(x=eval(x));
 
 
 </td></tr></tbody></table></td></tr></tbody></table></td></tr><tr>
-<td class="l" align="center"><hr><span class="b">ProSportsDaily.com is not affiliated with the NBA, NFL, MLB, or any of the newspapers linked to.</span><br><span class="b">©2003ProSportsDaily.com. All rights reserved. 111</span></td>
+<td class="l" align="center"><hr><span class="b">ProSportsDaily.com is not affiliated with the NBA, NFL, MLB, or any of the newspapers linked to.</span><br><span class="b">©2003ProSportsDaily.com. All rights reserved.</span></td>
 </tr></tbody></table>
 </body></html>
