--- a/t/tr/tra/trafficz.com.html
+++ b/t/tr/tra/trafficz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the trafficz.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610180326id_/http%3A//trafficz.com/privacy.asp%3Fo%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trafficz.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205014347id_/http%3A//www.trafficz.com/privacy.asp%3Fo%3D) for the most accurate reproduction.-->
 
 <html><head>
 <title>TrafficZ.com- Paid Domain Parking</title>
