--- a/p/pl/pla/play.vg.html
+++ b/p/pl/pla/play.vg.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the play.vg privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610120240id_/http%3A//www.play.vg/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the play.vg privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205014743id_/http%3A//www.play.vg/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>play.vg Privacy Policy</title>
@@ -72,7 +72,23 @@ on &quot;2004.01.10T09:56-0800&quot; for &quot;http://www.play.vg&quot;
 				<li class="sli"><a href="http://www.play.vg/free_games/Word Games.html" class="sidebar_link" title="Word Games">Word Games</a></li>
 				<li class="sli"><a href="http://www.play.vg/games/random.html" class="sidebar_link" title="Choose a game at random">Random Game!</a></li>
 				</ul>
-				<center><a href="http://a.websponsors.com/c/s=5328/c=30228/j=0/l=13/i=1/"><img src="http://a.websponsors.com/v/s=5328/c=30228/j=0/l=13/" width="125" height="125" alt="Free video games" border="0"></a><font size="1"><br><br></font></center>
+				<center>
+				<script type="text/javascript"><!--
+				google_ad_client = "pub-4421855918996262";
+				google_alternate_ad_url = "http://www.play.vg/125x125default.php";
+				google_ad_width = 125;
+				google_ad_height = 125;
+				google_ad_format = "125x125_as";
+				google_ad_channel ="4541093370";
+				google_color_border = "E7E7E7";
+				google_color_bg = "E7E7E7";
+				google_color_link = "0000C0";
+				google_color_url = "009900";
+				google_color_text = "000000";
+				//--></script>
+				<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+				</script>
+				<font size="1"><br><br></font></center>
 				<span class="sidebar_header">HELP:</span>
 				<ul>
 				<li class="sli"><b><a href="http://www.play.vg/help.php" class="sidebar_link" title="Game not working? Get help here!">FAQ (Get Help!)</a></b></li>
@@ -156,7 +172,7 @@ google_color_text = "000000";
 				<tr>
 					<td class="p_link"><a href="http://www.addictivegamez.com" target="_blank">Addictive Gamez</a></td>
 					<td class="p_link"><a href="http://www.insane-games.com">Insane Games</a></td>
-					<td class="p_link"><a href="http://www.play.vg/link_to_us.php">...Your site?...</a></td>
+					<td class="p_link"><a href="http://www.arcadenut.com">Arcade Nut</a></td>
 					<td class="p_link"><a href="http://www.play.vg/link_to_us.php">...Your site?...</a></td>
 				</tr>
 			</tbody></table>
@@ -182,8 +198,6 @@ google_color_text = "000000";
 </tbody></table>
 
 </center>
-
-<!-- Tracked by VGStats v1.0, Darren Hewer 2003 -->
 
 
 </body></html>
