--- a/e/ed/edh/edheads.org.html
+++ b/e/ed/edh/edheads.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the edheads.org privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603105548id_/http%3A//edheads.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the edheads.org privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205015904id_/http%3A//www.edheads.org/privacy.htm) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/index_teplate.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- #BeginEditable "doctitle" --> 
