--- a/a/al/ali/alighthouse.com.html
+++ b/a/al/ali/alighthouse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alighthouse.com privacy policy that was archived on 2004-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040611050503id_/http%3A//alighthouse.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alighthouse.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205030612id_/http%3A//www.alighthouse.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy</title>
