globalcollect.com (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3073,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.67,
  "homepage_snapshot_redirected_domain": "globalcollect.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040917023621id_/http://www.globalcollect.com/Index",
  "homepage_snapshot_url": "https://web.archive.org/web/20040920032950id_/http%3A//globalcollect.com",
  "interval": "2004_B",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "globalcollect.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205030912id_/http%3A//www.globalcollect.com/Index%3Fpublicationid%3D1167",
  "policy_title": "GlobalCollect Privacy",
  "policy_url": "globalcollect.com/Index?publicationid=1167",
  "sha1": "95cedfc804d8630c2b8c413b0a4b9c760521cad6",
  "simhash": 6430687915403128908,
  "simhash_updated": false,
  "site_hostname": "globalcollect.com",
  "site_url": "http://globalcollect.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041205030912",
  "word_count": 482,
  "year": 2004
}

--- a/g/gl/glo/globalcollect.com.html
+++ b/g/gl/glo/globalcollect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globalcollect.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604232905id_/http%3A//www.globalcollect.com/Index%3Fpublicationid%3D1167) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalcollect.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205030912id_/http%3A//www.globalcollect.com/Index%3Fpublicationid%3D1167) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html" ;="" charset="iso-8859-1">
@@ -407,6 +407,7 @@ preloadimages('rollover_menu1/top.gif','menu_images/top_select.gif','menu_images
 
 //-->
 </script> 
+<!-- Home template --> 
 <link rel="stylesheet" href="css/menu.css" type="text/css">
 <!--Begin main table -->
 
