ingdirect.co.uk (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4131,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.13,
  "homepage_snapshot_redirected_domain": "ingdirect.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040923010037id_/http://www.ingdirect.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040923010037id_/http%3A//ingdirect.co.uk",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ingdirect.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205043033id_/http%3A//www.ingdirect.co.uk/html/footer/privacypolicy.html",
  "policy_title": "ING Direct > Privacy Policy",
  "policy_url": "ingdirect.co.uk/html/footer/privacypolicy.html",
  "sha1": "9dfa05b0a9f17609c2d75b12c30994fdfd241f74",
  "simhash": 8437862517668131627,
  "simhash_updated": true,
  "site_hostname": "ingdirect.co.uk",
  "site_url": "http://ingdirect.co.uk",
  "smog": 12.8,
  "strict_updated": true,
  "timestamp": "20041205043033",
  "word_count": 684,
  "year": 2004
}

--- a/i/in/ing/ingdirect.co.uk.html
+++ b/i/in/ing/ingdirect.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ingdirect.co.uk privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603221131id_/http%3A//www.ingdirect.co.uk/html/footer/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ingdirect.co.uk privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205043033id_/http%3A//www.ingdirect.co.uk/html/footer/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>ING Direct &gt; Privacy Policy</title>
@@ -64,7 +64,13 @@
 		<p><b>To change your browser settings:</b><br>Netscape Communicator or Navigator: Choose Preferences from the Edit menu. From the Preferences menu, select Advanced, and several cookie options will be listed in the lower right of the menu. There will be options that allow you to accept cookies, request permission before accepting or disallow cookies completely.</p>
 		<p>Microsoft Internet Explorer: Choose Internet Options from the Tool menu. Choose the Privacy tab and move the slider to accept "Cookies", usually the Medium setting. You will have several options - accept cookies, ask permission before accepting cookies or disallow cookies.</p>
 		<p><b>Spotlight Tags </b><br>
-		In order to improve our website and understand how it, and links to it, are used, we are working with DoubleClick to track usage on our website. DoubleClick uses pixel tags, also known as beacons or spotlight tags, to improve our understanding of web traffic, visitor behaviour and response to promotional campaigns. Information on how to disable pixel tags, and DoubleClick’s own privacy policy can be read by <a href="http://www2.doubleclick.com/emea/htm/privacy_policy.asp" target="new">clicking here</a>.</p>
+		In order to improve our website and understand how it, and links to it,
+		  are used, we are working with third parties to track usage on our website.
+		  These third parties use pixel tags, also known as beacons or spotlight
+		  tags, to improve our understanding of web traffic, visitor behaviour
+		  and response to promotional campaigns. Pixel tags can be disabled by
+		  modifying the settings on your browser. For more information please
+		  contact your internet provider.</p>
 		<p>Changes to our privacy policy<br>
 This privacy policy may be modified from time to time.  Any changes to our privacy policy will be indicated on this page so you may want to check back here periodically.</p>
 		<!-- /main content area -->
